--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset=utf-8>
     <title>vim4evar</title>
+    <!-- style taken from https://codepen.io/ArtemGordinsky/pen/GnLBq -->
     <style>
 			body {
 				background-color:black;
-				color: white;
+				color: #B6B6B4;
 				font-family: Courier New, Courier, monospace;
 			}
 
@@ -28,7 +29,7 @@
 					color: transparent;
 				}
 				50% {
-					color: white;
+					color: #B6B6B4;
 				}
 			}
 
@@ -37,7 +38,7 @@
 					color: transparent;
 				}
 				50% {
-					color: white;
+					color: #B6B6B4;
 				}
 			}
 
@@ -46,7 +47,7 @@
 					color: transparent;
 				}
 				50% {
-					color: white;
+					color: #B6B6B4;
 				}
 			}
 
@@ -55,7 +56,7 @@
 					color: transparent;
 				}
 				50% {
-					color: white;
+					color: #B6B6B4;
 				}
 			}
 
@@ -64,7 +65,7 @@
 					color: transparent;
 				}
 				50% {
-					color: white;
+					color: #B6B6B4;
 				}
 			}
 		</style>
@@ -82,13 +83,16 @@
 <span class="steel-blue">~</span>                                                                              |
 <span class="steel-blue">~</span>                                                                              |
 <span class="steel-blue">~</span>                                                                              |
-<span class="steel-blue">~</span>                                                                              |
-<span class="steel-blue">~</span>                                                                              |
-<span class="steel-blue">~</span>                                                                              |
-<span class="steel-blue">~</span>                                                                              |
 <span class="steel-blue">~</span>                        VIM4evar - Vi IMproved forever!                       |
 <span class="steel-blue">~</span>                                                                              |
-<span class="steel-blue">~</span>                               version 9.25.2017                              |
+<span class="steel-blue">~</span>                               version 2017.9.25                              |
+<span class="steel-blue">~</span>               VIM4evar is open source and freely distributable               |
+<span class="steel-blue">~</span>                   https://github.com/jefflunt/vim4evar.com                   |
+<span class="steel-blue">~</span>                                                                              |
+<span class="steel-blue">~</span>                                                                              |
+<span class="steel-blue">~</span>                                                                              |
+<span class="steel-blue">~</span>                                                                              |
+<span class="steel-blue">~</span>                 VIM4evar is a silly website that does nothing                |
 <span class="steel-blue">~</span>                                                                              |
 <span class="steel-blue">~</span>                                                                              |
 <span class="steel-blue">~</span>                                                                              |
@@ -99,10 +103,7 @@
 <span class="steel-blue">~</span>                                                                              |
 <span class="steel-blue">~</span>                                                                              |
 <span class="steel-blue">~</span>                                                                              |
-<span class="steel-blue">~</span>                                                                              |
-<span class="steel-blue">~</span>                                                                              |
-<span class="steel-blue">~</span>                                                                              |
-"vim4evar.com/index.html" 109L, 4714C                                          |
+"vim4evar.com/index.html" 110L, 4800C                                          |
       </pre>
     </center>
   </body>
